# Pico-Eval-Board-80

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  disks.c  iosim.c  lcd.c  lcd.h  memsim.c  picosim.c  rgbled.h  sim.h  simcfg.c  simio.c  simmem.c
lcd/: README
lcd/config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lcd/font/: CMakeLists.txt  font12.c  font8.c  fonts.h
lcd/lcd/: CMakeLists.txt  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_GUI.h  LCD_Touch.c
libs/lcd/config/: DEV_Config.c
libs/lcd/font/: font24.c  font8.c
libs/lcd/lcd/: LCD_Driver.c  LCD_Driver.h
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple_sdio/: main.c
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SDIO/: rp2040_sdio.pio
roms/: Makefile
rp2040/: CMakeLists.txt  dazzler.c  dazzler.h  disks.c  lcd.c  lcd.h  picosim.c  simcfg.c  simio.c
rp2040/lcd/config/: DEV_Config.c  DEV_Config.h
rp2040/lcd/font/: CMakeLists.txt  font16.c  font24.c  fonts.h
rp2040/lcd/lcd/: CMakeLists.txt  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_GUI.h  LCD_Touch.c  LCD_Touch.h
rp2350/: CMakeLists.txt  CMakeLists.txt.arm  CMakeLists.txt.corev  dazzler.c  dazzler.h  disks.c  lcd.c  lcd.h  picosim.c  simcfg.c  simio.c
rp2350/lcd/: README
rp2350/lcd/config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
rp2350/lcd/font/: CMakeLists.txt  font12.c  font20.c
rp2350/lcd/lcd/: CMakeLists.txt  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_GUI.h
src-examples/: Makefile  README  test8080.lis
srcsim/: CMakeLists.txt  dazzler.h  disks.c  disks.h  picosim.c  sim.h  simcfg.c  simcfg.h
